--- a/etc/Vagrantfile
+++ b/etc/Vagrantfile
@@ -3,6 +3,12 @@ Vagrant.configure("2") do |config|
 
   config.vm.synced_folder ".", "/home/ubuntu/Krypto-trading-bot"
 
+  #config.vm.provider "virtualbox" do |vb|
+  #  vb.gui = true
+  #  vb.memory = "2048"
+  #  vb.cpus = "2"
+  #end
+
   config.vm.provision "shell", inline: <<-SHELL
     apt-get update
     apt-get install build-essential software-properties-common -y
@@ -12,5 +18,16 @@ Vagrant.configure("2") do |config|
     apt-get update
     apt-get install gcc-6 g++-6 -y
     update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-6 60 --slave /usr/bin/g++ g++ /usr/bin/g++-6
+
+    add-apt-repository ppa:gnome-terminator
+    apt-get update
+    apt-get install terminator -y
+
+    apt-get upgrade -y
+    SHELL
+
+  config.vm.provision "shell", privileged: false, inline: <<-SHELL
+    wget -q --show-progress -O eclipse.tar.gz "http://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/oxygen/1a/eclipse-cpp-oxygen-1a-linux-gtk-x86_64.tar.gz&r=1"
+    tar -xf eclipse.tar.gz
     SHELL
 end
